--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="separador col-12"></div>
 
 			<section class="text-center d-grid gap-2 col-3 mx-auto">
-				<a class="btn btn-danger btn-lg" href="http://eepurl.com/hW4eMP" target:"blank" role="button">Inscribirse al curso</a>
+				<a class="btn btn-danger btn-lg" href="http://eepurl.com/hW4eMP" target="blank" role="button">Inscribirse al curso</a>
 			</section>
 		
 			
